nice-assignment/archive/nice-assignment_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

        - name: backend-app
          image: backend-app:latest
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "sleep 30 && node index.js"]
          ports:
            - containerPort: 3000
        - name: frontend-app
          image: frontend-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

      volumes:
        - name: mongo-data
          emptyDir: {}
