nice-assignment/archive/nice-assignment_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-service
spec:
  # ingressClassName is necessary since v1.22
  ingressClassName: nginx
  tls:
  - hosts:
    - nice-assignment.local
    secretName: my-tls-secret
  rules:
  - host: nice-assignment.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
